--- a/front-hotel/templates/register.html
+++ b/front-hotel/templates/register.html
@@ -5,7 +5,7 @@
     <title>register</title>
 </head>
 <body>
-    <form class="ui form" action="http://localhost:5000/user" method="post">
+    <form class="ui form" action="/register" method="post">
         <div class="field">
           <label>Pseudo</label>
           <input type="text" name="pseudo" placeholder="Pseudo">
