--- a/front-hotel/templates/home.html
+++ b/front-hotel/templates/home.html
@@ -2,13 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    <div class="ui buttons">
-        <button onclick="window.location.href = '/login'" class="ui positive button">Login</button>
-        <div class="or"></div>
-        <button onclick="window.location.href = '/register'" class="ui button">Register</button>
+    <div class="ui menu">
+        <a class="header item" href="/home">
+          Our Compagny
+        </a>
+        <a class="item" href="/user">
+          Profil
+        </a>
+        <a class="item" href="#">
+          ...
+        </a>
+        <a class="item" href="#">
+          ...
+        </a>
+        <div class="right menu">
+            <div class="item">
+                <div class="ui buttons">
+                  {% if authenticated %}
+                  <form class="ui form" action="/logout" method="post">
+                    <button type="submit" class="ui red button">Logout</button>
+                  </form>
+                  {% else %}
+                  <button onclick="window.location.href = '/login'" class="ui positive button">Login</button>
+                  <div class="or"></div>
+                  <button onclick="window.location.href = '/register'" class="ui button">Register</button>
+                  {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
+    <div>
+        {% block content %}{% endblock %}
     </div>
 </body>
 </html>
