--- a/front-hotel/templates/register.html
+++ b/front-hotel/templates/register.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>register</title>
-</head>
-<body>
+{% extends 'home.html' %}
+
+{% block title %}Register{% endblock %}
+
+{% block content %}
+
     <form class="ui form" action="/register" method="post">
         <div class="field">
           <label>Pseudo</label>
@@ -30,8 +29,6 @@
         </div>
         <button class="ui button" type="submit">Submit</button>
       </form>
-</body>
-</html>
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.3/dist/semantic.min.css">
-<script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.3/dist/semantic.min.js"></script>
+
+{% endblock %}
+  
