AjoutFonctionnalité Users + Employee

--- a/front-hotel/templates/logout.html
+++ b/front-hotel/templates/logout.html
@@ -1,9 +1,9 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Logout{% endblock %}
 
 {% block content %}
 
-<h1>An error occured</h1>
+<h1>logout</h1>
 
 {% endblock %}
