--- a/front-hotel/templates/home.html
+++ b/front-hotel/templates/home.html
@@ -1,44 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}</title>
-</head>
-<body>
-    <div class="ui menu">
-        <a class="header item" href="/home">
-          Our Compagny
-        </a>
-        <a class="item" href="/user">
-          Profil
-        </a>
-        <a class="item" href="#">
-          ...
-        </a>
-        <a class="item" href="#">
-          ...
-        </a>
-        <div class="right menu">
-            <div class="item">
-                <div class="ui buttons">
-                  {% if authenticated %}
-                  <form class="ui form" action="/logout" method="post">
-                    <button type="submit" class="ui red button">Logout</button>
-                  </form>
-                  {% else %}
-                  <button onclick="window.location.href = '/login'" class="ui positive button">Login</button>
-                  <div class="or"></div>
-                  <button onclick="window.location.href = '/register'" class="ui button">Register</button>
-                  {% endif %}
-                </div>
-            </div>
-        </div>
-    </div>
-    <div>
-        {% block content %}{% endblock %}
-    </div>
-</body>
-</html>
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.3/dist/semantic.min.css">
-<script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.3/dist/semantic.min.js"></script>
+{% extends 'base.html' %}
+
+{% block title %}Home{% endblock %}
+
+{% block content %}
+
+<h1>welcome to the home page</h1>
+
+{% endblock %}
