add Hotel / rooms / booking

--- a/front-hotel/templates/user.html
+++ b/front-hotel/templates/user.html
@@ -16,7 +16,7 @@
             <div class="four wide column">
                 <button onclick="window.location.href = '/change_user'" class="ui icon primary button" >
                     <i class="pencil alternate icon"></i>
-                    Modifier
+                    modified
                 </button>
                 <form class="ui form" action="/delete_user" method="post">
                     <button type="submit" class="ui red button">delete</button>
