--- a/front-hotel/templates/base.html
+++ b/front-hotel/templates/base.html
@@ -12,7 +12,7 @@
         <a class="item" href="/user">
           Profil
         </a>
-        <a class="item" href="#">
+        <a class="item" href="/booking">
           my reservations
         </a>
         {% if administration %}
