admin hotel / booking / image 50%

--- a/front-hotel/templates/administration.html
+++ b/front-hotel/templates/administration.html
@@ -4,26 +4,44 @@
 
 {% block content %}
 
-<div class="ui container">
-    <h1>List of Users</h1>
-    <table class="ui celled table">
-        <thead>
-            <tr>
-                <th>Pseudo</th>
-                <th>Email</th>
-                <th>Rôle</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for user in users %}
+{% if session["role"] == "employee" %}
+    <div class="ui container">
+        <h1>List of Users</h1>
+        <table class="ui celled table">
+            <thead>
                 <tr>
-                    <td>{{ user.pseudo }}</td>
-                    <td>{{ user.email }}</td>
-                    <td>{{ user.role }}</td>
+                    <th>Pseudo</th>
+                    <th>Email</th>
+                    <th>Rôle</th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
+            </thead>
+            <tbody>
+                {% for user in users %}
+                    <tr>
+                        <td>{{ user.pseudo }}</td>
+                        <td>{{ user.email }}</td>
+                        <td>{{ user.role }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+{% else %}
+    <div class="ui container">
+        <h1>Administration Page</h1>
+        <div class="ui buttons">
+            <a class="ui button" href="/admin_hotels">Hôtels</a>
+        </div>
+        <div class="ui buttons">
+            <a class="ui button" href="/admin_bookings">Booking</a>
+        </div>
+        <div class="ui buttons">
+            <a class="ui button" href="/images">Images</a>
+        </div>
+        <div class="ui buttons">
+            <a class="ui button" href="/rooms">Rooms</a>
+        </div>
+    </div>
+{% endif %}
 
 {% endblock %}
