--- a/front-hotel/templates/base.html
+++ b/front-hotel/templates/base.html
@@ -15,7 +15,7 @@
         <a class="item" href="/booking">
           my reservations
         </a>
-        {% if administration %}
+        {% if session["role"] == "employee" or session["role"] == "admin" %}
         <a class="item" href="/administration">
           Administration
         </a>
@@ -23,7 +23,7 @@
         <div class="right menu">
             <div class="item">
                 <div class="ui buttons">
-                  {% if authenticated %}
+                  {% if session['authenticated'] == True %}
                   <form class="ui form" action="/logout" method="post">
                     <button type="submit" class="ui red button">Logout</button>
                   </form>
