--- a/front-hotel/templates/images.html
+++ b/front-hotel/templates/images.html
@@ -9,9 +9,12 @@
     <div class="ui divided items">
         {% for hotel in hotels %}
             <div class="item">
+                <div class="content">
+                    <a class="header">{{ hotel.name }}</a>
+                </div>
                 {% for data in hotel['image'] %}
                     <div class="image">
-                        <img src="data:image/jpeg;base64,{{ data['data'] }}" alt=""> 
+                        <img class="ui image" style="width: 200px; height: 150px;" src="data:image/jpeg;base64,{{ data['data'] }}" alt="">
                     </div>
                     <div class="ui form">
                         <form action="/delete_image" method="post">
@@ -21,9 +24,6 @@
                         </form>
                     </div>
                 {% endfor %}                    
-                <div class="content">
-                    <a class="header">{{ hotel.name }}</a>
-                </div>
                 <div class="ui form">
                     <form action="/images" method="post" enctype="multipart/form-data">
                         <input type="file" name="image" accept="image/*" required>
