--- a/front-hotel/templates/booking.html
+++ b/front-hotel/templates/booking.html
@@ -17,7 +17,7 @@
             <input type="text" name="dateout" placeholder="year-month-day">
         </div>
         <input type="hidden" name="room_id" value="{{ room_id }}">
-        <button class="ui button primary" type="submit">Booking</button>
+        <button class="ui button primary" name="submit" type="submit">Booking</button>
     </form>
 </div>
 {% endblock %}
