--- a/front-hotel/templates/change_booking.html
+++ b/front-hotel/templates/change_booking.html
@@ -14,7 +14,7 @@
         <input type="text" name="dateout" placeholder="year-month-day">
     </div>
     <input type="hidden" name="booking_id" value="{{reservation.id}}">
-    <button class="ui button" type="submit">Submit</button>
+    <button class="ui button" name="submit" type="submit">Submit</button>
 </form>
 
 {% endblock %}
