--- a/front-hotel/templates/home.html
+++ b/front-hotel/templates/home.html
@@ -34,7 +34,7 @@
                                         <div class="ui buttons">
                                             <form class="ui form" action="/home" method="post">
                                               <input type="hidden" name="room_id" value="{{ room.id }}">  
-                                              <button type="submit" class="ui primary button">Booking</button>
+                                              <button type="submit" name="booking" class="ui primary button">Booking</button>
                                             </form>
                                         </div>
                                     </div>
