--- a/front-hotel/templates/register.html
+++ b/front-hotel/templates/register.html
@@ -18,16 +18,16 @@
           <input type="password" name="password" placeholder="password">
         </div>
         <div class="field">
-            <label>Password</label>
-            <input type="password" name="verif_password" placeholder="verification_password">
-          </div>
+          <label>Confirm_Password</label>
+          <input type="password" name="confirm_password" placeholder="confirm_password">
+        </div>
         <div class="field">
             <div class="ui toggle checkbox">
                 <input type="checkbox" name="example">
                 <label>I agree to the Terms and Conditions</label>
             </div>
         </div>
-        <button class="ui button" type="submit">Submit</button>
+        <button class="ui button" name="submit" type="submit">Submit</button>
       </form>
 
 {% endblock %}
