--- a/front-hotel/templates/change_user.html
+++ b/front-hotel/templates/change_user.html
@@ -17,7 +17,7 @@
           <label>Password</label>
           <input type="password" name="password" placeholder="password">
         </div>
-        <button class="ui button" type="submit">Submit</button>
+        <button class="ui button" name="submit" type="submit">Submit</button>
     </form>
 
 {% endblock %}
