--- a/front-hotel/templates/login.html
+++ b/front-hotel/templates/login.html
@@ -13,7 +13,7 @@
     <label>Password</label>
     <input type="password" name="password" placeholder="password">
   </div>
-  <button class="ui positive button" type="submit">login</button>
+  <button class="ui positive button" name="submit" type="submit">login</button>
 </form>
 
 {% endblock %}
