--- a/front-hotel/templates/administration.html
+++ b/front-hotel/templates/administration.html
@@ -30,16 +30,16 @@
     <div class="ui container">
         <h1>Administration Page</h1>
         <div class="ui buttons">
-            <a class="ui button" href="/admin_hotels">Hôtels</a>
+            <a class="ui button" name="admin_hotels" href="/admin_hotels">Hôtels</a>
         </div>
         <div class="ui buttons">
-            <a class="ui button" href="/admin_bookings">Booking</a>
+            <a class="ui button" name="admin_bookings" href="/admin_bookings">Booking</a>
         </div>
         <div class="ui buttons">
-            <a class="ui button" href="/images">Images</a>
+            <a class="ui button" name="admin_images" href="/images">Images</a>
         </div>
         <div class="ui buttons">
-            <a class="ui button" href="/rooms">Rooms</a>
+            <a class="ui button" name="admin_rooms" href="/rooms">Rooms</a>
         </div>
     </div>
 {% endif %}
