--- a/front-hotel/templates/change_room.html
+++ b/front-hotel/templates/change_room.html
@@ -14,7 +14,7 @@
         <input type="number" name="nb_personne" placeholder="">
     </div>
     <input type="hidden" name="room_id" value="{{room_id}}">
-    <button class="ui button" type="submit">Submit</button>
+    <button class="ui button" name="submit" type="submit">Submit</button>
 </form>
 
 {% endblock %}
