--- a/front-hotel/templates/hotel.html
+++ b/front-hotel/templates/hotel.html
@@ -17,7 +17,7 @@
             <label>location</label>
             <input type="text" name="location" placeholder="location">
         </div>
-        <button class="ui button" type="submit">Submit</button>
+        <button class="ui button" name="submit" type="submit">Submit</button>
     </form>
 
 {% endblock %}
