--- a/front-hotel/templates/change_hotel.html
+++ b/front-hotel/templates/change_hotel.html
@@ -18,7 +18,7 @@
         <input type="text" name="location" placeholder="">
     </div>
     <input type="hidden" name="hotel_id" value="{{hotel_id}}">
-    <button class="ui button" type="submit">Submit</button>
+    <button class="ui button" name="submit" type="submit">Submit</button>
 </form>
 
 {% endblock %}
