--- a/front-hotel/templates/room.html
+++ b/front-hotel/templates/room.html
@@ -13,11 +13,8 @@
             <label>Number of people</label>
             <input type="number" name="nb_personne" placeholder="2">
         </div>
-        <div class="field">
-            <label>Hotel ID</label>
-            <input type="number" name="hotel_id" placeholder="1">
-        </div>
-        <button class="ui button" type="submit">Submit</button>
+        <input type="hidden" name="hotel_id" value="{{ hotel_id }}">
+        <button class="ui button" name="submit" type="submit">Submit</button>
     </form>
 
 {% endblock %}
